Thread safety, DTrace probes, encapsulation, OS compatibility - Snow Leopard is now required for development and Leopard for deployment. - Added new warning flags. - Moved code in BXPGFunctionExpressionEvaluator.mm and BXDataModelCompiler.m to work around -Wundeclared-selector. - Moved non-PostgreSQL specific DTrace probes to BXProbes.d. - Oids are now stored into unsigned long type NSNumbers. - Also removed the PGTS provider and renamed the probes. - Fixed BXCFHostCompatibility.h so that it won't try to import iPhone specific header on Mac OS X. - Made some constant qualifiers more clear. - Made some methods safer by returning an immutable object. - Wrote classes for encapsulating functionality in CFNetwork and SystemConfiguration and replaced the corresponding code in PGTSConnection and PGTSConnector. The classes use a CFRunLoop in a thread specific to the framework. - Moved the class that uses AppKit-specific notifications to BaseTenAppKit. It still gets used if the framework is linked. - Wrote documentation for various internal classes and marked the documentation \internal. - Renamed various private methods for conformance with company guidelines. - Wrote a class for serializing access to a socket. On Leopard, it uses a CFSocket and creates an observer to the thread in which it receives the -install message. On Snow Leopard, it uses a serial dispatch queue and Berkeley sockets. - Added synchronization to some methods to make them thread safe. - Changed PGTSConnectionMonitor so that it's no longer tied to PGTSConnection. Also renamed it to BXConnectionMonitor. - Removed AppKit as a weak framework. Instead, declared only specific symbols as weak.

--- a/common-xcconfig/common.xcconfig
+++ b/common-xcconfig/common.xcconfig
@@ -17,11 +17,14 @@ GCC_SHORT_ENUMS = NO
 GCC_SYMBOLS_PRIVATE_EXTERN = NO
 GCC_TREAT_WARNINGS_AS_ERRORS = YES
 GCC_USE_GCC3_PFE_SUPPORT = YES
+GCC_OBJC_CALL_CXX_CDTORS = YES
+GCC_WARN_HIDDEN_VIRTUAL_FUNCTIONS = YES
+GCC_WARN_UNDECLARED_SELECTOR = YES
 LINK_WITH_STANDARD_LIBRARIES = YES
 PREBINDING = NO
 SKIP_INSTALL = YES
 ZERO_LINK = NO
-SDKROOT = $(DEVELOPER_SDK_DIR)/MacOSX10.5.sdk
+SDKROOT = $(DEVELOPER_SDK_DIR)/MacOSX10.6.sdk
 WARNING_CFLAGS = -Wall
 OTHER_CFLAGS = -DUSE_SSL -DXCODEBUILD_TARGET_NAME="$(TARGET_NAME)" -DXCODEBUILD_PROJECT_NAME="$(PROJECT_NAME)" -DXCODEBUILD_PROJECT_FILE_PATH="$(PROJECT_FILE_PATH)"
 OTHER_LDFLAGS = $(COVERAGE_LDFLAGS)
