PostgreSQL deployment target, GCC versions - Added the GCC versions for individual architectures to 10.5.xcconfig, since the PostgreSQL build script uses them.

--- a/common-xcconfig/10.5.xcconfig
+++ b/common-xcconfig/10.5.xcconfig
@@ -1,2 +1,9 @@
 GCC_VERSION = 4.2
+
+// For the PostgreSQL build script.
+GCC_VERSION_ppc = 4.2
+GCC_VERSION_i386 = 4.2
+GCC_VERSION_ppc64 = 4.2
+GCC_VERSION_x86_64 = 4.2
+
 MACOSX_DEPLOYMENT_TARGET = 10.5
