Build system, libpq headers - Changed SCNetworkReachabilityFlags back to SCNetworkConnectionFlags, because the former isn't defined in Mac OS X 10.5 SDK. - Rewrote the libpq build script as a makefile. - libpq is now built in release configuration even when making a debug build of BaseTen. - Architecture-independent PostgreSQL headers are now copied only once to BaseTen.framework. - Added headers to include the corrent architecture-dependent PostgreSQL header. - BXSocketDescriptor now compiles when Mac OS X 10.5 SDK is in use. - Changed NSPointerArray and NSMapTable additions so that the new methods are defined in categories for these classes instead of NSObject. Adding the category to NSObject caused problems with NSFileWrapper deallocation. - Changed BXDatabaseObjectModelXMLSerialization so that entities and attributes are sorted in the resulting document. This way the results can be compared more easily. - Changed build configurations so that debug builds can be made for any supported architecture, not just the build machine's native architecture. - Building for ppc64 works again. - Made NSNetServiceDelegate conditional because the protocol isn't available in Mac OS X 10.5 SDK.

--- a/BaseTenAppKit/xcconfig/common.xcconfig
+++ b/BaseTenAppKit/xcconfig/common.xcconfig
@@ -1,4 +1,4 @@
-#include "../../common-xcconfig/10.5.xcconfig"
+#include "../../common-xcconfig/MacOSX10.5-6.xcconfig"
 #include "../../common-xcconfig/common.xcconfig"
 #include "../../common-xcconfig/framework.xcconfig"
 
@@ -12,3 +12,4 @@ HEADER_SEARCH_PATHS = $(BUILT_PRODUCTS_DIR)
 LIBRARY_SEARCH_PATHS = $(BUILT_PRODUCTS_DIR)
 USER_HEADER_SEARCH_PATHS = $(PROJECT_DIR)
 GCC_PREFIX_HEADER = Sources/BaseTenAppKit_Prefix.pch
+ARCHS = ppc ppc64 i386 x86_64
