--- a/BaseTenAssistant/xcconfig/common.xcconfig
+++ b/BaseTenAssistant/xcconfig/common.xcconfig
@@ -1,4 +1,4 @@
-#include "../../common-xcconfig/10.5.xcconfig"
+#include "../../common-xcconfig/MacOSX10.5.xcconfig"
 #include "../../common-xcconfig/common.xcconfig"
 #include "../../common-xcconfig/application.xcconfig"
 #include "../../common-xcconfig/gc.xcconfig"
@@ -11,3 +11,4 @@ LIBRARY_SEARCH_PATHS = $(BUILT_PRODUCTS_DIR)
 USER_HEADER_SEARCH_PATHS = $(PROJECT_DIR)
 GCC_PREFIX_HEADER = Sources/BaseTenAssistant_Prefix.pch
 IBC_PLUGIN_SEARCH_PATHS = $(BUILT_PRODUCTS_DIR)
+ARCHS = ppc ppc64 i386 x86_64
