--- a/InterfaceBuilderPlugin/xcconfig/common.xcconfig
+++ b/InterfaceBuilderPlugin/xcconfig/common.xcconfig
@@ -1,5 +1,5 @@
 #include "../../common-xcconfig/common.xcconfig"
-#include "../../common-xcconfig/10.5.xcconfig"
+#include "../../common-xcconfig/MacOSX10.5.xcconfig"
 #include "../../common-xcconfig/gc.xcconfig"
 
 INFOPLIST_FILE = Info.plist
@@ -10,3 +10,4 @@ HEADER_SEARCH_PATHS = $(BUILT_PRODUCTS_DIR)
 LIBRARY_SEARCH_PATHS = $(BUILT_PRODUCTS_DIR)
 USER_HEADER_SEARCH_PATHS = $(PROJECT_DIR)
 GCC_PREFIX_HEADER = Sources/InterfaceBuilderPlugin_Prefix.pch
+ARCHS = ppc i386 x86_64
