--- a/common-xcconfig/debug.xcconfig
+++ b/common-xcconfig/debug.xcconfig
@@ -1,4 +1,3 @@
-ARCHS = $(NATIVE_ARCH_ACTUAL)
 COPY_PHASE_STRIP = NO
 DEBUG_BUILD = YES
 DEPLOYMENT_POSTPROCESSING = NO
@@ -13,3 +12,4 @@ SEPARATE_STRIP = NO
 SKIP_INSTALL = YES
 STRIP_INSTALLED_PRODUCT = NO
 DEBUG_BUILD = 1
+ONLY_ACTIVE_ARCH = YES
