--- a/UnitTests/xcconfig/common.xcconfig
+++ b/UnitTests/xcconfig/common.xcconfig
@@ -1,4 +1,4 @@
-#include "../../common-xcconfig/10.5.xcconfig"
+#include "../../common-xcconfig/MacOSX10.5.xcconfig"
 #include "../../common-xcconfig/non-gc.xcconfig"
 
 INFOPLIST_FILE = UnitTests-Info.plist
