--- a/common-xcconfig/common.xcconfig
+++ b/common-xcconfig/common.xcconfig
@@ -11,11 +11,8 @@ GCC_INCREASE_PRECOMPILED_HEADER_SHARING = YES
 GCC_INLINES_ARE_PRIVATE_EXTERN = YES
 GCC_MODEL_TUNING = G5
 GCC_ONE_BYTE_BOOL = NO
-GCC_PRECOMPILE_PREFIX_HEADER = YES
 GCC_REUSE_STRINGS = YES
 GCC_SHORT_ENUMS = NO
-GCC_SYMBOLS_PRIVATE_EXTERN = NO
-GCC_TREAT_WARNINGS_AS_ERRORS = YES
 GCC_USE_GCC3_PFE_SUPPORT = YES
 GCC_OBJC_CALL_CXX_CDTORS = YES
 GCC_WARN_HIDDEN_VIRTUAL_FUNCTIONS = YES
@@ -24,7 +21,7 @@ LINK_WITH_STANDARD_LIBRARIES = YES
 PREBINDING = NO
 SKIP_INSTALL = YES
 ZERO_LINK = NO
-WARNING_CFLAGS = -Wall
-OTHER_CFLAGS = -DUSE_SSL -DXCODEBUILD_TARGET_NAME="$(TARGET_NAME)" -DXCODEBUILD_PROJECT_NAME="$(PROJECT_NAME)" -DXCODEBUILD_PROJECT_FILE_PATH="$(PROJECT_FILE_PATH)"
+WARNING_CFLAGS = -Wall $(CLANG_WARNING_CFLAGS)
+GCC_PREPROCESSOR_DEFINITIONS = USE_SSL XCODEBUILD_TARGET_NAME="$(TARGET_NAME)" XCODEBUILD_PROJECT_NAME="$(PROJECT_NAME)" XCODEBUILD_PROJECT_FILE_PATH="$(PROJECT_FILE_PATH)"
 OTHER_LDFLAGS = $(COVERAGE_LDFLAGS)
 IBC_PLUGINS = $(BUILT_PRODUCTS_DIR)/BaseTen.ibplugin
