--- a/xcconfig/coverage-gc.xcconfig
+++ b/xcconfig/coverage-gc.xcconfig
@@ -1,4 +1,5 @@
 #include "../common-xcconfig/gc.xcconfig"
 #include "../common-xcconfig/debug.xcconfig"
 #include "../common-xcconfig/coverage.xcconfig"
+#include "../common-xcconfig/MacOSX10.5-6-gcc.xcconfig"
 #include "common.xcconfig"
