--- a/xcconfig/debug-non-gc.xcconfig
+++ b/xcconfig/debug-non-gc.xcconfig
@@ -1,3 +1,4 @@
 #include "../common-xcconfig/non-gc.xcconfig"
 #include "../common-xcconfig/debug.xcconfig"
+#include "../common-xcconfig/MacOSX10.5-6-gcc.xcconfig"
 #include "common.xcconfig"
