Fixed configuration files for subprojects, removed the use of a Mac OS X 10.6 -specific API

--- a/BaseTenAppKit/xcconfig/release-gc.xcconfig
+++ b/BaseTenAppKit/xcconfig/release-gc.xcconfig
@@ -1,5 +1,6 @@
 #include "../../common-xcconfig/gc.xcconfig"
 #include "../../common-xcconfig/release.xcconfig"
+#include "../../common-xcconfig/MacOSX10.5-6-gcc.xcconfig"
 #include "common.xcconfig"
 
 INSTALL_PATH = @executable_path/../Frameworks
