--- a/InterfaceBuilderPlugin/xcconfig/release.xcconfig
+++ b/InterfaceBuilderPlugin/xcconfig/release.xcconfig
@@ -1,2 +1,4 @@
+#include "../../common-xcconfig/gc.xcconfig"
 #include "../../common-xcconfig/release.xcconfig"
+#include "../../common-xcconfig/MacOSX10.5-6-gcc.xcconfig"
 #include "common.xcconfig"
