Removed dependences and updated configurations

--- a/xcconfig/external-release.xcconfig
+++ b/xcconfig/external-release.xcconfig
@@ -1,5 +1,4 @@
-#include "../common-xcconfig/non-gc.xcconfig"
 #include "../common-xcconfig/release.xcconfig"
 #include "../common-xcconfig/MacOSX10.5.xcconfig"
 
-ARCHS = ppc ppc64 i386 x86_64
+ARCHS = i386 x86_64
