--- a/common-xcconfig/MacOSX10.5.xcconfig
+++ b/common-xcconfig/MacOSX10.5.xcconfig
@@ -1,20 +1,16 @@
 #include "gcc.xcconfig"
 
 // Architecture specifics are required by the PostgreSQL build script.
-GCC_VERSION_ppc = 4.2
-GCC_VERSION_i386 = 4.2
-GCC_VERSION_ppc64 = 4.2
-GCC_VERSION_x86_64 = 4.2
-GCC_VERSION = 4.2
+GCC_VERSION_ppc = com.apple.compilers.llvm.clang.1_0
+GCC_VERSION_i386 = com.apple.compilers.llvm.clang.1_0
+GCC_VERSION_ppc64 = com.apple.compilers.llvm.clang.1_0
+GCC_VERSION_x86_64 = com.apple.compilers.llvm.clang.1_0
+GCC_VERSION = com.apple.compilers.llvm.clang.1_0
 
-MACOSX_DEPLOYMENT_TARGET_ppc = 10.5
-MACOSX_DEPLOYMENT_TARGET_i386 = 10.5
-MACOSX_DEPLOYMENT_TARGET_ppc64 = 10.5
-MACOSX_DEPLOYMENT_TARGET_x86_64 = 10.5
+MACOSX_DEPLOYMENT_TARGET_i386 = 10.8
+MACOSX_DEPLOYMENT_TARGET_x86_64 = 10.8
 MACOSX_DEPLOYMENT_TARGET = $(MACOSX_DEPLOYMENT_TARGET_$(CURRENT_ARCH))
 
-SDKROOT_ppc = $(DEVELOPER_SDK_DIR)/MacOSX10.5.sdk
-SDKROOT_i386 = $(DEVELOPER_SDK_DIR)/MacOSX10.5.sdk
-SDKROOT_ppc64 = $(DEVELOPER_SDK_DIR)/MacOSX10.5.sdk
-SDKROOT_x86_64 = $(DEVELOPER_SDK_DIR)/MacOSX10.5.sdk
+SDKROOT_i386 = $(DEVELOPER_SDK_DIR)/MacOSX10.10.sdk
+SDKROOT_x86_64 = $(DEVELOPER_SDK_DIR)/MacOSX10.10.sdk
 SDKROOT = $(SDKROOT_$(CURRENT_ARCH))
