--- a/xcconfig/common.xcconfig
+++ b/xcconfig/common.xcconfig
@@ -1,7 +1,7 @@
 #include "../common-xcconfig/common.xcconfig"
 #include "../common-xcconfig/framework.xcconfig"
 
-ARCHS = ppc ppc64 i386 x86_64
+ARCHS = i386 x86_64
 DYLIB_COMPATIBILITY_VERSION = 1
 DYLIB_CURRENT_VERSION = 1
 FRAMEWORK_SEARCH_PATHS = $(BUILT_PRODUCTS_DIR) $(BUILD_DIR)/Release
